# amtk

./: AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  amtk.doap  amtk.pc.in  configure.ac  meson.build  meson_options.txt
amtk/: Makefile.am  NOTES  amtk-action-info-central-store.c  amtk-action-info-central-store.h  amtk-action-info-store.c  amtk-action-info-store.h  amtk-action-info.c  amtk-action-info.h  amtk-action-map.c  amtk-action-map.h  amtk-application-window.c  amtk-application-window.h  amtk-enum-types.c.template  amtk-enum-types.h.template  amtk-factory.c  amtk-factory.h  amtk-gmenu.c  amtk-gmenu.h  amtk-init.c  amtk-init.h  amtk-menu-item.c  amtk-menu-item.h  amtk-menu-shell.c  amtk-menu-shell.h  amtk-shortcuts.c  amtk-shortcuts.h  amtk-sources.mak  amtk-types.h  amtk-utils.c  amtk-utils.h  amtk.h  meson.build
docs/reference/: Makefile.am  amtk-5.0-sections.txt  amtk-docs.xml.in  amtk-intro.xml.in  api-breaks.xml
po/: LINGUAS  Makevars  POTFILES.in  cs.po  da.po  de.po  en_GB.po  es.po  eu.po  fr.po  fur.po  hu.po  id.po  it.po  ja.po  lt.po  ms.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po
tests/: Makefile.am  meson.build  test-headerbar.c  test-menu.c  test-traditional-ui.c
testsuite/: Makefile.am  meson.build  test-action-info-store.c  test-action-map.c  test-utils.c
win32/: Makefile.am  Makefile.vc  README.txt  amtkpc.py  build-rules-msvc.mak  config-msvc.mak.in  config.h.win32.in  create-lists-msvc.mak  detectenv-msvc.mak  generate-msvc.mak  info-msvc.mak  install-msvc.mak
