EXTRA_DIST = \
	amtkpc.py		\
	build-rules-msvc.mak	\
	config.h.win32.in	\
	config.h.win32		\
	config-msvc.mak		\
	config-msvc.mak.in	\
	create-lists.bat	\
	create-lists-msvc.mak	\
	detectenv-msvc.mak	\
	generate-msvc.mak	\
	info-msvc.mak		\
	install-msvc.mak	\
	introspection-msvc.mak	\
	Makefile.vc		\
	pc_base.py		\
	README.txt		\
	replace.py

MAINTAINERCLEANFILES =	\
	config.h.win32	\
	config-msvc.mak	\
	Makefile

-include $(top_srcdir)/git.mk
